// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSubheader.js should have custom class 1`] = `

<div class="subheader foo">
</div>

`;

exports[`VSubheader.js should have custom class 2`] = `

<div class="subheader theme--light">
</div>

`;

exports[`VSubheader.js should have custom class 3`] = `

<div class="subheader theme--dark">
</div>

`;

exports[`VSubheader.js should have custom class 4`] = `

<div class="subheader subheader--inset">
</div>

`;
